--- a/src/vmm-add-hardware.glade
+++ b/src/vmm-add-hardware.glade
@@ -2210,6 +2210,17 @@ access in the guest.</property>
                           </packing>
                         </child>
                         <child>
+                          <widget class="GtkLabel" id="label32">
+                            <property name="visible">True</property>
+                            <property name="label">fs</property>
+                          </widget>
+                          <packing>
+                            <property name="position">10</property>
+                            <property name="tab_fill">False</property>
+                            <property name="type">tab</property>
+                          </packing>
+                        </child>
+                        <child>
                           <widget class="GtkVBox" id="page5-box1">
                             <property name="visible">True</property>
                             <property name="border_width">1</property>
@@ -2279,16 +2290,251 @@ access in the guest.</property>
                             </child>
                           </widget>
                           <packing>
-                            <property name="position">5</property>
+                            <property name="position">11</property>
                           </packing>
                         </child>
                         <child>
-                          <widget class="GtkLabel" id="label32">
+                          <widget class="GtkLabel" id="label3212">
                             <property name="visible">True</property>
-                            <property name="label">fs</property>
+                            <property name="label">sc</property>
                           </widget>
                           <packing>
-                            <property name="position">10</property>
+                            <property name="position">11</property>
+                            <property name="tab_fill">False</property>
+                            <property name="type">tab</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <widget class="GtkVBox" id="vbox58">
+                            <property name="visible">True</property>
+                            <property name="homogeneous">False</property>
+                            <property name="spacing">12</property>
+
+                            <child>
+                              <widget class="GtkLabel" id="label437">
+                                <property name="visible">True</property>
+                                <property name="label" translatable="yes">Please indicate the parameters of the redirected device.</property>
+                                <property name="use_underline">False</property>
+                                <property name="use_markup">True</property>
+                                <property name="justify">GTK_JUSTIFY_LEFT</property>
+                                <property name="wrap">True</property>
+                                <property name="selectable">False</property>
+                                <property name="xalign">0</property>
+                                <property name="yalign">0.5</property>
+                                <property name="xpad">0</property>
+                                <property name="ypad">0</property>
+                                <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+                                <property name="width_chars">-1</property>
+                                <property name="single_line_mode">False</property>
+                                <property name="angle">0</property>
+                              </widget>
+                              <packing>
+                                <property name="padding">0</property>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                              </packing>
+                            </child>
+
+                            <child>
+                              <widget class="GtkAlignment" id="alignment162">
+                                <property name="visible">True</property>
+                                <property name="xalign">0.5</property>
+                                <property name="yalign">0.5</property>
+                                <property name="xscale">1</property>
+                                <property name="yscale">1</property>
+                                <property name="top_padding">0</property>
+                                <property name="bottom_padding">0</property>
+                                <property name="left_padding">24</property>
+                                <property name="right_padding">0</property>
+
+                                <child>
+                                  <widget class="GtkTable" id="table39">
+                                    <property name="visible">True</property>
+                                    <property name="n_rows">2</property>
+                                    <property name="n_columns">2</property>
+                                    <property name="homogeneous">False</property>
+                                    <property name="row_spacing">12</property>
+                                    <property name="column_spacing">12</property>
+
+                                    <child>
+                                      <widget class="GtkLabel" id="label438">
+                                        <property name="visible">True</property>
+                                        <property name="label" translatable="yes">_Host:</property>
+                                        <property name="use_underline">True</property>
+                                        <property name="use_markup">False</property>
+                                        <property name="justify">GTK_JUSTIFY_LEFT</property>
+                                        <property name="wrap">False</property>
+                                        <property name="selectable">False</property>
+                                        <property name="xalign">1</property>
+                                        <property name="yalign">0.5</property>
+                                        <property name="xpad">0</property>
+                                        <property name="ypad">0</property>
+                                        <property name="mnemonic_widget">usbredir-host</property>
+                                        <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+                                        <property name="width_chars">-1</property>
+                                        <property name="single_line_mode">False</property>
+                                        <property name="angle">0</property>
+                                      </widget>
+                                      <packing>
+                                        <property name="left_attach">0</property>
+                                        <property name="right_attach">1</property>
+                                        <property name="top_attach">1</property>
+                                        <property name="bottom_attach">2</property>
+                                        <property name="x_options">fill</property>
+                                        <property name="y_options"></property>
+                                      </packing>
+                                    </child>
+
+                                    <child>
+                                      <widget class="GtkHBox" id="hbox68">
+                                        <property name="visible">True</property>
+                                        <property name="homogeneous">False</property>
+                                        <property name="spacing">6</property>
+
+                                        <child>
+                                          <widget class="GtkEntry" id="usbredir-host">
+                                            <property name="visible">True</property>
+                                            <property name="can_focus">True</property>
+                                            <property name="editable">True</property>
+                                            <property name="visibility">True</property>
+                                            <property name="max_length">0</property>
+                                            <property name="text" translatable="yes"></property>
+                                            <property name="has_frame">True</property>
+                                            <property name="invisible_char">•</property>
+                                            <property name="activates_default">False</property>
+                                            <signal name="focus_in_event" handler="char_host_focus_in"/>
+                                          </widget>
+                                          <packing>
+                                            <property name="padding">0</property>
+                                            <property name="expand">True</property>
+                                            <property name="fill">True</property>
+                                          </packing>
+                                        </child>
+
+                                        <child>
+                                          <widget class="GtkLabel" id="label439">
+                                            <property name="visible">True</property>
+                                            <property name="label" translatable="yes">_Port:</property>
+                                            <property name="use_underline">True</property>
+                                            <property name="use_markup">False</property>
+                                            <property name="justify">GTK_JUSTIFY_LEFT</property>
+                                            <property name="wrap">False</property>
+                                            <property name="selectable">False</property>
+                                            <property name="xalign">0</property>
+                                            <property name="yalign">0.5</property>
+                                            <property name="xpad">0</property>
+                                            <property name="ypad">0</property>
+                                            <property name="mnemonic_widget">usbredir-service</property>
+                                            <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+                                            <property name="width_chars">-1</property>
+                                            <property name="single_line_mode">False</property>
+                                            <property name="angle">0</property>
+                                          </widget>
+                                          <packing>
+                                            <property name="padding">0</property>
+                                            <property name="expand">False</property>
+                                            <property name="fill">True</property>
+                                          </packing>
+                                        </child>
+
+                                        <child>
+                                          <widget class="GtkSpinButton" id="usbredir-service">
+                                            <property name="visible">True</property>
+                                            <property name="can_focus">True</property>
+                                            <property name="climb_rate">1</property>
+                                            <property name="digits">0</property>
+                                            <property name="numeric">False</property>
+                                            <property name="update_policy">GTK_UPDATE_ALWAYS</property>
+                                            <property name="snap_to_ticks">False</property>
+                                            <property name="wrap">False</property>
+                                            <property name="adjustment">0 0 67000 1 10 0</property>
+                                            <signal name="focus_in_event" handler="char_host_focus_in"/>
+                                          </widget>
+                                          <packing>
+                                            <property name="padding">0</property>
+                                            <property name="expand">False</property>
+                                            <property name="fill">True</property>
+                                          </packing>
+                                        </child>
+                                      </widget>
+                                      <packing>
+                                        <property name="left_attach">1</property>
+                                        <property name="right_attach">2</property>
+                                        <property name="top_attach">1</property>
+                                        <property name="bottom_attach">2</property>
+                                        <property name="y_options">fill</property>
+                                      </packing>
+                                    </child>
+
+                                    <child>
+                                      <widget class="GtkLabel" id="label3213">
+                                        <property name="visible">True</property>
+                                        <property name="label" translatable="yes">_Type:</property>
+                                        <property name="use_underline">True</property>
+                                        <property name="use_markup">False</property>
+                                        <property name="justify">GTK_JUSTIFY_LEFT</property>
+                                        <property name="wrap">False</property>
+                                        <property name="selectable">False</property>
+                                        <property name="xalign">1</property>
+                                        <property name="yalign">0.5</property>
+                                        <property name="xpad">0</property>
+                                        <property name="ypad">0</property>
+                                        <property name="mnemonic_widget">usbredir-list</property>
+                                        <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+                                        <property name="width_chars">-1</property>
+                                        <property name="single_line_mode">False</property>
+                                        <property name="angle">0</property>
+                                      </widget>
+                                      <packing>
+                                        <property name="left_attach">0</property>
+                                        <property name="right_attach">1</property>
+                                        <property name="top_attach">0</property>
+                                        <property name="bottom_attach">1</property>
+                                        <property name="x_options">fill</property>
+                                        <property name="y_options"></property>
+                                      </packing>
+                                    </child>
+
+                                    <child>
+                                      <widget class="GtkComboBox" id="usbredir-list">
+                                        <property name="visible">True</property>
+                                        <property name="add_tearoffs">False</property>
+                                        <property name="focus_on_click">True</property>
+                                        <signal name="changed" handler="on_usbredir_type_changed"/>
+                                      </widget>
+                                      <packing>
+                                        <property name="left_attach">1</property>
+                                        <property name="right_attach">2</property>
+                                        <property name="top_attach">0</property>
+                                        <property name="bottom_attach">1</property>
+                                        <property name="x_options">fill</property>
+                                        <property name="y_options">fill</property>
+                                      </packing>
+                                    </child>
+                                  </widget>
+                                </child>
+                              </widget>
+                              <packing>
+                                <property name="padding">0</property>
+                                <property name="expand">False</property>
+                                <property name="fill">True</property>
+                              </packing>
+                            </child>
+                          </widget>
+                          <packing>
+                            <property name="position">12</property>
+                            <property name="tab_expand">False</property>
+                            <property name="tab_fill">True</property>
+                          </packing>
+                        </child>
+
+                        <child>
+                          <widget class="GtkLabel" id="label436">
+                            <property name="visible">True</property>
+                            <property name="label">usbr</property>
+                          </widget>
+                          <packing>
+                            <property name="position">12</property>
                             <property name="tab_fill">False</property>
                             <property name="type">tab</property>
                           </packing>
